terraform-code/dev/account-3666/us-east4/geotrade-app/gke/central-staging/loki-stack/loki-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: stage-nextgen-grafana-geotrade.geoverse.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: geotrade-loki-grafana
                port:
                  number: 3000
  tls:
  - hosts:
    - stage-nextgen-grafana-geotrade.geoverse.io
    secretName: geoverse-tls-secret
